<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Golf Tracker</string>
    <string name="app_id">160727100791393</string>
    <string name="title_activity_main">Courses</string>
    <string name="title_activity_new_entry">New Course</string>
    <string name="title_activity_edit_entry">Edit Course</string>
    <!-- <string name="title_course_page">Courses</string> -->
    <string name="menu_add">Add Course</string>
    <string name="menu_clear">Clear</string>
    <string name="menu_reset">Reset to Default</string>
    <string name="hint_name">Name</string>
    <string name="hint_address">Street Address</string>
    <string name="hint_city">City, ST</string>
    <string name="hint_zip">Zip Code</string>
    <string name="button_save">Save</string>
    <string name="delete_ok">Course deleted</string>
    <string name="exception">Exception: %1$s</string>
    <string name="ok_button">OK</string>
    <string name="error_name_is_empty">Name cannot be empty</string>
    <string name="error_unknown_param">Unknown parameter</string>
    <string name="error_generic">Failed</string>
    <string name="holesText">Holes: </string>
    <string name="playGolfButton">Play Golf!</string>
    <string name="locate_course_button">Locate Courses Near You</string>
    <string name="create_course_button">Create Course</string>
    <string name="view_course_button">List Courses</string>
    <string name="title_activity_home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="menu_delete">Delete</string>
    <string name="_18">18</string>
    <string name="pick_friends_button">Pick Friends</string>

</resources>