<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|center_horizontal"
    android:orientation="vertical" >

    <!--
         <Button
        android:id="@+id/courseSearchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course_search_button"
        android:onClick="onCourseSearchButtonClick"
        android:layout_margin="15dp"
        />
    -->

    <Button
        android:id="@+id/viewCourseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:onClick="onCourseViewButtonClick"
        android:text="@string/view_course_button"
        tools:ignore="UnusedIds,UnusedIds" />

    <Button
        android:id="@+id/locateCourseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:onClick="onCourseLocateButtonClick"
        android:text="@string/locate_course_button"
        tools:ignore="UnusedIds" />

    <Button
        android:id="@+id/createCourseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:onClick="onCourseCreateButtonClick"
        android:text="@string/create_course_button"
        tools:ignore="UnusedIds" />

    <Button
        android:id="@+id/playGolfButtonHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:onClick="onPlayGolfButtonClick"
        android:text="@string/playGolfButton" />

</LinearLayout>